css/src/_edit-button.scss
/**
 * Edit button styling
 */

#adminmenu #admin-menu-manager-edit {
	margin-top: 20px;
	cursor: default !important;
	float: left;
	width: 100%;
}

#admin-menu-manager-edit button,
#admin-menu-manager-edit .menu-top {
	background: transparent !important;
	font-size: 13px !important;
	cursor: pointer !important;
}

.folded #adminmenu #admin-menu-manager-edit .wp-menu-name {
	display: none !important;
}

#admin-menu-manager-edit {
	> button {
		width: 100%;
	}

	button {
		background: transparent;
		border: none;
		padding: 0 !important;
		color: #eee;

		&:hover {
			color:#00a0d2;
		}
	}
}

.amm-edit-options {
	display: none;
	float: left;
	width: 100%;
	text-align: center;

	#admin-menu-manager-edit.active & {
		display: block;
	}
}

.amm-edit-option {
	display: inline-block;
	width: 27px;
	height: 27px;
	position: relative;

	.wp-menu-image {
		#adminmenu & {
			margin: 0;
			float: none;
			width: 27px;
			height: 27px;
			padding: 0;
		}

		&:before {
			color: inherit !important;
			padding: 0 !important;
			width: 27px;
			height: 27px;
		}
	}
}

#amm-edit-option-save .wp-menu-image:before {
	font-size: 27px;
	margin-top: -4px;
}

.amm-edit-option-choices {
	display: block;
	position: absolute;
	color: #fff;
	top: 40px;
	left: 0;
	white-space: nowrap;
	overflow: visible;
	z-index: 100;

	&.hidden {
		display: none;
	}

	&:after {
		content: " ";
		bottom: 100%;
		left: 18px;
		border: 10px solid transparent;
		height: 0;
		width: 0;
		position: absolute;
		pointer-events: none;
		margin-left: -10px;
	}
}

.amm-edit-option-choice {
	padding: 5px 20px 5px 15px !important;
}

#admin-menu-manager-edit.active > .menu-top {
	display: none;
}

